src/objects/SPE_Geo_Transform_Table__c.object
<CustomObject>
    <fields>
        <fullName>FromValue__c</fullName>
        <label>From Value</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ToValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ToValue</label>
        <referenceTo>SPE_ProjectMaster__c</referenceTo>
        <relationshipLabel>Geo Transform Table</relationshipLabel>
        <relationshipName>Geo_Transform_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transform__c</fullName>
        <label>Transform</label>
        <picklist>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Geo Transform Table</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Geo Transform Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geo Transform Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>